Fix bugs in swagger
